# ABC_Coursework

./: .gitignore  bibliography_database.bib  course_content.tex  main.tex  preamble.tex  table_of_contents.tex
.github/workflows/: results-plots.yml
bsuir_tex/: course_content.tex  course_work_suggestions.md  main.tex  preamble.tex
bsuir_tex/config/: cfg.tex
bsuir_typst/: course_title.typ  main.typ
bsuir_typst/stp/: stp.typ
fft-benchmark/: CMakeLists.txt
fft-benchmark/input_data/: input.txt  input_131072.txt  input_262144.txt
fft-benchmark/src/: benchmark.cpp  benchmark.h  fft.h  fft_kernel.cl  generate_input.cpp  gpu_benchmark.cpp  main.cpp
fft-benchmark/tests/: fft_test.cpp
reports/bsuir_tex/: bibliography_database.bib  course_content.tex  course_title.tex  first_section.tex  fourth_section.tex  intorduction.tex  main.tex  preamble.tex  references.tex  second_section.tex  third_section.tex
reports/bsuir_typst/: bibliography.bib  conclusion.typ  course_title.typ  cpu_graphs.typ  cpu_load_graphs.typ  fifth_section.typ  first_section.typ  fourth_section.typ  introduction.typ  main.typ  second_section.typ  third_section.typ
results/perf_results/: perf_amd_19112025_141447_multi_16threads_smt_on.csv  perf_amd_19112025_141447_single_smt_on.csv  perf_amd_19112025_141543_multi_8threads_smt_on.csv  perf_amd_19112025_141543_single_smt_on.csv  perf_amd_19112025_141555_multi_4threads_smt_on.csv  perf_amd_19112025_141555_single_smt_on.csv  perf_amd_19112025_141625_multi_8threads_smt_off.csv  perf_amd_19112025_141625_single_smt_off.csv  perf_amd_19112025_141646_multi_4threads_smt_off.csv  perf_amd_19112025_141646_single_smt_off.csv
results/raw_results/: results_amd_19112025_141505_single_smt_on.csv  results_amd_19112025_141508_multi_16threads_smt_on.csv  results_amd_19112025_141543_single_smt_on.csv  results_amd_19112025_141546_multi_8threads_smt_on.csv  (+14 more)
scripts/: build.sh  build_and_run.sh  generate_cpu_plots.py  generate_plots.py  run.sh
(+265 files in other folders)
